kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: akash-shopnow
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
