kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: akash-shopnow
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/group.name: shopnow
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /akash
            pathType: Prefix
            backend:
              service: { name: frontend-service, port: { number: 80 } }
